--- a/README
+++ b/README
@@ -13,4 +13,4 @@ numbers or even both (by default).
 Currently supported formats : Genbank, Embl, Pir codata, and
 assimiled.
 
-Any remark/suggestion/problem should be reported to <njoly@pasteur.fr>.
+Any remark/suggestion/problem should be reported to <njoly@pasteur.fr> and/or <vlegrand@pasteur.fr>.
