--- a/doc/golden.pod
+++ b/doc/golden.pod
@@ -47,9 +47,10 @@ Output result in F<file>.
 
 =item -f F<file1> F<file2> F<file3> F<...> F<fileN>
 
-Input query values read from F<file1> F<file2> F<file3> F<...> F<fileN>
-These files must contain F<dbase>:F<name> information separated by \n.
-See the example part for more information.
+ Input query values are read from F<file1> F<file2> F<file3> F<...> F<fileN>.
+ These files must contain F<dbase>:F<name> information separated by \n.
+ Query results are sorted in the same order as query values are provided in input.
+ See the example part for more information on file format.
 
 =back
 
@@ -75,6 +76,7 @@ Search:
  entries named `mmvasp' and 'otherAC' in `genbank' databank,
  entries named 'stuff1', 'stuff2' and 'stuff3 in 'embl' databank' 
  entry named 'anotherLocus' in 'uniprot' databank.
+
 Search is performed in both entry names and accession number indexes (default = both).
 
 =item golden -i genbank:mmvasp embl:stuff1 embl:stuff2 genbank:otherAC uniprot:anotherLocus embl:stuff3
@@ -88,14 +90,14 @@ List all available (indexed) databanks.
 =item golden -f file1 file2 file3
 
 Search all entries listed in file1, file2 and file3.
-File format must be as follows:
 
-genbank:mmvasp
-embl:stuff1
-embl:stuff2
-genbank:otherAC
-uniprot:anotherLocus
-embl:stuff3
+File format must be as follows:
+ genbank:mmvasp\n
+ embl:stuff1\n
+ embl:stuff2\n
+ genbank:otherAC\n
+ uniprot:anotherLocus\n
+ embl:stuff3
 
 =back
 
@@ -119,4 +121,4 @@ Used to specify an alternate golden indexes directory.
 
 =head1 AUTHOR
 
-Nicolas Joly (njoly@pasteur.fr), Véronique Legrand (vlegrand@pasteur.fr) Institut Pasteur.
+Nicolas Joly (njoly@pasteur.fr), Veronique Legrand (vlegrand@pasteur.fr) Institut Pasteur.
