--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+What's new in 3.3
+
+* bug fix. Error detection when goldin tries to retrieve a card from "broken" golden indexes. 
+
 What's new in 3.0
 
 * goldin input can now be index files. Index files can be concatenated, sorted and purged.
