--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+What's new in 3.1.1
+
+* Better error message for the case of broken indexes.
+
 What's new in 3.3
 
 * bug fix. Error detection when goldin tries to retrieve a card from "broken" golden indexes. 
