--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1,4 +1,4 @@
-m4trace:configure.ac:2: -1- AC_INIT([golden], [3])
+m4trace:configure.ac:2: -1- AC_INIT([golden], [3.3.1])
 m4trace:configure.ac:2: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:2: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:2: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -148,7 +148,7 @@ m4trace:configure.ac:2: -1- AC_SUBST_TRACE([target_alias])
 m4trace:configure.ac:2: -1- m4_pattern_allow([^target_alias$])
 m4trace:configure.ac:4: -1- AM_INIT_AUTOMAKE
 m4trace:configure.ac:4: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:4: -1- AM_AUTOMAKE_VERSION([1.13])
+m4trace:configure.ac:4: -1- AM_AUTOMAKE_VERSION([1.9])
 m4trace:configure.ac:4: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:4: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -159,13 +159,14 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^INSTALL_SCRIPT$])
 m4trace:configure.ac:4: -1- AC_SUBST([INSTALL_DATA])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([INSTALL_DATA])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^INSTALL_DATA$])
-m4trace:configure.ac:4: -1- AC_SUBST([am__isrc], [' -I$(srcdir)'])
-m4trace:configure.ac:4: -1- AC_SUBST_TRACE([am__isrc])
-m4trace:configure.ac:4: -1- m4_pattern_allow([^am__isrc$])
-m4trace:configure.ac:4: -1- _AM_SUBST_NOTMAKE([am__isrc])
 m4trace:configure.ac:4: -1- AC_SUBST([CYGPATH_W])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([CYGPATH_W])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^CYGPATH_W$])
+m4trace:configure.ac:4: -1- _m4_warn([obsolete], [The macro `AC_FOREACH' is obsolete.
+You should run autoupdate.], [../../lib/autoconf/general.m4:196: AC_FOREACH is expanded from...
+aclocal.m4:802: _AM_SET_OPTIONS is expanded from...
+aclocal.m4:501: AM_INIT_AUTOMAKE is expanded from...
+configure.ac:4: the top level])
 m4trace:configure.ac:4: -1- AC_SUBST([PACKAGE], ['AC_PACKAGE_TARNAME'])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([PACKAGE])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^PACKAGE$])
@@ -180,7 +181,6 @@ m4trace:configure.ac:4: -1- AC_DEFINE_TRACE_LITERAL([VERSION])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^VERSION$])
 m4trace:configure.ac:4: -1- AH_OUTPUT([VERSION], [/* Version number of package */
 @%:@undef VERSION])
-m4trace:configure.ac:4: -1- AC_REQUIRE_AUX_FILE([missing])
 m4trace:configure.ac:4: -1- AC_SUBST([ACLOCAL])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([ACLOCAL])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^ACLOCAL$])
@@ -205,11 +205,8 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^STRIP$])
 m4trace:configure.ac:4: -1- AC_SUBST([INSTALL_STRIP_PROGRAM])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([INSTALL_STRIP_PROGRAM])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^INSTALL_STRIP_PROGRAM$])
-m4trace:configure.ac:4: -1- AC_REQUIRE_AUX_FILE([install-sh])
-m4trace:configure.ac:4: -1- AC_SUBST([MKDIR_P])
-m4trace:configure.ac:4: -1- AC_SUBST_TRACE([MKDIR_P])
-m4trace:configure.ac:4: -1- m4_pattern_allow([^MKDIR_P$])
-m4trace:configure.ac:4: -1- AC_SUBST([mkdir_p], ['$(MKDIR_P)'])
+m4trace:configure.ac:4: -1- AM_PROG_MKDIR_P
+m4trace:configure.ac:4: -1- AC_SUBST([mkdir_p])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([mkdir_p])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^mkdir_p$])
 m4trace:configure.ac:4: -1- AC_SUBST([AWK])
@@ -221,7 +218,7 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^SET_MAKE$])
 m4trace:configure.ac:4: -1- AC_SUBST([am__leading_dot])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([am__leading_dot])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^am__leading_dot$])
-m4trace:configure.ac:4: -1- AC_SUBST([AMTAR], ['$${TAR-tar}'])
+m4trace:configure.ac:4: -1- AC_SUBST([AMTAR])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([AMTAR])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^AMTAR$])
 m4trace:configure.ac:4: -1- AC_SUBST([am__tar])
@@ -230,22 +227,6 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^am__tar$])
 m4trace:configure.ac:4: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:4: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^am__untar$])
-m4trace:configure.ac:4: -1- AM_SILENT_RULES
-m4trace:configure.ac:4: -1- AC_SUBST([AM_V])
-m4trace:configure.ac:4: -1- AC_SUBST_TRACE([AM_V])
-m4trace:configure.ac:4: -1- m4_pattern_allow([^AM_V$])
-m4trace:configure.ac:4: -1- _AM_SUBST_NOTMAKE([AM_V])
-m4trace:configure.ac:4: -1- AC_SUBST([AM_DEFAULT_V])
-m4trace:configure.ac:4: -1- AC_SUBST_TRACE([AM_DEFAULT_V])
-m4trace:configure.ac:4: -1- m4_pattern_allow([^AM_DEFAULT_V$])
-m4trace:configure.ac:4: -1- _AM_SUBST_NOTMAKE([AM_DEFAULT_V])
-m4trace:configure.ac:4: -1- AC_SUBST([AM_DEFAULT_VERBOSITY])
-m4trace:configure.ac:4: -1- AC_SUBST_TRACE([AM_DEFAULT_VERBOSITY])
-m4trace:configure.ac:4: -1- m4_pattern_allow([^AM_DEFAULT_VERBOSITY$])
-m4trace:configure.ac:4: -1- AC_SUBST([AM_BACKSLASH])
-m4trace:configure.ac:4: -1- AC_SUBST_TRACE([AM_BACKSLASH])
-m4trace:configure.ac:4: -1- m4_pattern_allow([^AM_BACKSLASH$])
-m4trace:configure.ac:4: -1- _AM_SUBST_NOTMAKE([AM_BACKSLASH])
 m4trace:configure.ac:5: -1- AC_CONFIG_HEADERS([src/config.h])
 m4trace:configure.ac:8: -1- AC_SUBST([CC])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([CC])
@@ -299,16 +280,9 @@ m4trace:configure.ac:8: -1- m4_pattern_allow([^AMDEP_TRUE$])
 m4trace:configure.ac:8: -1- AC_SUBST([AMDEP_FALSE])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AMDEP_FALSE])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^AMDEP_FALSE$])
-m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
-m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
 m4trace:configure.ac:8: -1- AC_SUBST([AMDEPBACKSLASH])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
-m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
-m4trace:configure.ac:8: -1- AC_SUBST([am__nodep])
-m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__nodep])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^am__nodep$])
-m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([am__nodep])
 m4trace:configure.ac:8: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([CCDEPMODE])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^CCDEPMODE$])
@@ -321,8 +295,6 @@ m4trace:configure.ac:8: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
 m4trace:configure.ac:8: -1- AC_SUBST([am__fastdepCC_FALSE])
 m4trace:configure.ac:8: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
 m4trace:configure.ac:8: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
-m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
-m4trace:configure.ac:8: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
 m4trace:configure.ac:9: -1- AC_SUBST([RANLIB])
 m4trace:configure.ac:9: -1- AC_SUBST_TRACE([RANLIB])
 m4trace:configure.ac:9: -1- m4_pattern_allow([^RANLIB$])
@@ -432,15 +404,6 @@ m4trace:configure.ac:38: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:38: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([LTLIBOBJS])
 m4trace:configure.ac:38: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:38: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.ac:38: -1- AC_SUBST([am__EXEEXT_TRUE])
-m4trace:configure.ac:38: -1- AC_SUBST_TRACE([am__EXEEXT_TRUE])
-m4trace:configure.ac:38: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.ac:38: -1- AC_SUBST([am__EXEEXT_FALSE])
-m4trace:configure.ac:38: -1- AC_SUBST_TRACE([am__EXEEXT_FALSE])
-m4trace:configure.ac:38: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.ac:38: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.ac:38: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([top_builddir])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([top_build_prefix])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([srcdir])
@@ -451,4 +414,3 @@ m4trace:configure.ac:38: -1- AC_SUBST_TRACE([builddir])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([abs_builddir])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([abs_top_builddir])
 m4trace:configure.ac:38: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:38: -1- AC_SUBST_TRACE([MKDIR_P])
