--- a/README
+++ b/README
@@ -13,12 +13,22 @@ numbers or even both (by default).
 Currently supported formats : Genbank, Embl, Pir codata, and
 assimiled.
 
+To install golden and goldin just do :
+./configure
+make
+[sudo] make install
+
 golden functionnalities can also be exported to python (in order to be called from your python script).
 In order to do that, you must of course have python installed on your machine.
 
 These python "bindings" or "exports" were tested with python 2.7.
 
-To install them, type:
+Alternative installation directory for python binding can be specified via the configure "dir_for_binding_install" variable.
+For example:
+./configure dir_for_binding_install="/tmp" 
+will cause the python binding to be installed in /tmp rather than at the default place (pythonXXX/site-packages).
+
+To install the python binding, just type (whatever configure variables you used):
 sudo python setup.py install
 
 Any remark/suggestion/problem should be reported to <njoly@pasteur.fr> and/or <vlegrand@pasteur.fr>.
