--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+What's new in 3.4.2
+* Added python bindings for python 3.7 and python3.8
+
 What's new in 3.4.1
 * Added python bindings for python 3.4; python3.5 and python3.6
 * Bug fix (strlen while building query on input args).
