--- a/README
+++ b/README
@@ -21,7 +21,7 @@ make
 golden functionnalities can also be exported to python (in order to be called from your python script).
 In order to do that, you must of course have python installed on your machine.
 
-These python "bindings" or "exports" were tested with python 2.7.
+These python "bindings" or "exports" were tested with python 2.7 upto python 3.11.
 
 Alternative installation directory for python binding can be specified via the configure "dir_for_binding_install" variable.
 For example:
@@ -31,4 +31,7 @@ will cause the python binding to be installed in /tmp rather than at the default
 To install the python binding, just type (whatever configure variables you used):
 sudo python setup.py install
 
-Any remark/suggestion/problem should be reported to <njoly@pasteur.fr> and/or <vlegrand@pasteur.fr>.
+For puthon 3.10 and 3.11, python bindings can be easily installed via pip. Just type:
+pip3 install --user golden-seq-retriever 
+
+Any remark/suggestion/problem should be reported to <vlegrand@pasteur.fr>.
